# roq-api

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  .syntastic_cpp_config  .travis.yml  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  ChangeLog.md  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  quinclas-tradingapi.pc.in  quinclas_tradingapi.pc.in  roq-api.pc.in  roq.pc.in
bench/: CPPLINT.cfg  Makefile.am  main.cpp
doc/: Doxyfile.in  Makefile.am
doxygen/: .gitignore  CMakeLists.txt  Doxyfile.cmake.in  Doxyfile.in
examples/collector/: Makefile.am  README.md  collector.cpp  collector.h  csv_reader.cpp  csv_reader.h  generator.cpp  generator.h  main.cpp
examples/execution_engine/: Makefile.am  main.cpp
examples/gateway/: Makefile.am  README.md  gateway.cpp  gateway.h  main.cpp  strategy.h
examples/gateway_simulator/: Makefile.am  controller.h  main.cpp  strategy.h
examples/reference/: Makefile.am  README.md  config.cpp  config.h  config_reader.cpp  config_reader.h  csv_reader.cpp  csv_reader.h  exposure.cpp  exposure.h  gateway_manager.cpp  gateway_manager.h  generator.cpp  generator.h  main.cpp  order.cpp  order.h  order_imbalance.cpp  order_imbalance.h  order_manager.cpp  order_manager.h  position.cpp  position.h  position_manager.cpp  position_manager.h  reference.conf  risk_manager.cpp  risk_manager.h  strategy.conf  strategy.cpp  strategy.h  trading_model.cpp  trading_model.h  utilities.cpp  utilities.h
examples/strategy/: Makefile.am  README.md  main.cpp  strategy.cpp  strategy.h
examples/trading_engine/: Makefile.am  controller.h  main.cpp  strategy.cpp  strategy.h
include/quinclas/: .gitignore  CPPLINT.cfg  Makefile.am  client.h  codec.h  common.fbs  enums.fbs  file.h  file_system.h  filesystem.h  libevent.h  logging.h  memory.h  net.h  platform.h  server.h  simulation.h  tradingapi.fbs  tradingapi.h  tradingapi.h.in
include/roq/: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile.am  README.md  account.h  action.hpp  add_market.hpp  add_routes.hpp  api.fbs  api.h  api.h.in  api.hpp  api.hpp.in  application.h  atomic.h  atomic_ref.h  bar.hpp  batch_begin.h  batch_begin.hpp  batch_end.h  batch_end.hpp  buffer_capacity.hpp  builtins.h  cancel_all_orders.h  cancel_all_orders.hpp  cancel_all_orders_ack.hpp  cancel_all_orders_filter.hpp  cancel_order.h  cancel_order.hpp  cancel_policy.h  cancel_quotes.hpp  cancel_quotes_ack.hpp  category.hpp  chrono.h  client.h  clock.hpp  codec.h  compare.h  compat.h  (+267 more)
samples/execution_engine/: .gitignore  Makefile.am  main.cpp  strategy.cpp  strategy.h
samples/simulator/: Makefile.am  main.cpp
schema/cpp/: CMakeLists.txt  Makefile.am  README.md  add_routes.json  batch_begin.json  batch_end.json  buffer_capacity.json  cancel_all_orders.json  cancel_all_orders_ack.json  cancel_all_orders_filter.json  cancel_order.json  cancel_policy.json  category.json  connected.json  connection.json  connection_status.json  create_order.json  custom_matrix.json  custom_matrix_update.json  custom_metrics.json  custom_metrics_update.json  daily_statistics.json  decimals.json  disconnected.json  download_begin.json  download_end.json  encoding.json  error.json  execution_instruction.json  external_latency.json  fill.json  filter.json  funds_update.json  gateway_settings.json  gateway_status.json  layer.json  liquidity.json  margin_mode.json  market_by_order_update.json  market_by_price_update.json  (+68 more)
schema/fbs/: CMakeLists.txt  Makefile.am  README.md  api.fbs  buffer_capacity.fbs  cancel_all_orders.fbs  cancel_all_orders_ack.fbs  cancel_all_orders_filter.fbs  cancel_order.fbs  category.fbs  connection_status.fbs  create_order.fbs  custom_matrix.fbs  custom_matrix_update.fbs  custom_metrics.fbs  custom_metrics_update.fbs  daily_statistics.fbs  decimals.fbs  download_begin.fbs  download_end.fbs  encoding.fbs  error.fbs  execution_instruction.fbs  external_latency.fbs  fill.fbs  filter.fbs  funds_update.fbs  gateway_settings.fbs  gateway_status.fbs  layer.fbs  liquidity.fbs  market_by_order.fbs  market_by_order_update.fbs  market_by_price.fbs  market_by_price_update.fbs  market_data_status.fbs  market_status.fbs  mbo_update.fbs  mbp_update.fbs  measurement.fbs  (+50 more)
schema/java/: BatchBegin.json  BatchEnd.json  BufferCapacity.json  CMakeLists.txt  CancelAllOrders.json  CancelAllOrdersAck.json  CancelOrder.json  Category.json  Connected.json  ConnectionStatus.json  CreateOrder.json  Disconnected.json  DownloadBegin.json  DownloadEnd.json  Encoding.json  Error.json  ExecutionInstruction.json  ExternalLatency.json  Fill.json  Filter.json  FundsUpdate.json  GatewaySettings.json  GatewayStatus.json  Layer.json  Liquidity.json  MBOUpdate.json  MBPUpdate.json  MarginMode.json  MarketByOrderUpdate.json  MarketByPriceUpdate.json  MarketStatus.json  MessageInfo.json  ModifyOrder.json  OptionType.json  OrderAck.json  OrderCancelPolicy.json  OrderManagement.json  OrderStatus.json  OrderType.json  OrderUpdate.json  (+35 more)
src/benchmark/: Makefile.am  main.cpp
src/execution_engine/: CPPLINT.cfg  Makefile.am  controller.cpp  controller.h  dispatcher.cpp  dispatcher.h  event.cpp  event.h  event_dispatcher.cpp  event_dispatcher.h  main.cpp  net.cpp  net.h  request_dispatcher.cpp  request_dispatcher.h  strategy.cpp  strategy.h
src/roq/: Makefile.am  affinity.cpp  affinity.h  application.cpp  (+6 more)
test/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile.am  alignment.cpp  chrono.cpp  compare.cpp  compat.cpp  datetime.cpp  debug.cpp  enum.cpp  exceptions.cpp  fixed_string.cpp  format.cpp  json.cpp  logging.cpp  main.cpp  mask.cpp  math.cpp  metrics.cpp  ranges.cpp  rate_limiter.cpp  request_status.cpp  safe_cast.cpp  side.cpp  span.cpp  static.cpp  stream.cpp  string.cpp  string_buffer.cpp  support_type.cpp  test_codec.cpp  test_connection_string.cpp  test_gateways.cpp  test_logging.cpp  test_logging_glog.cpp  test_logging_spdlog.cpp  test_stream.cpp  test_utils.cpp  traits.cpp  (+4 more)
tests/: Makefile.am  main.cpp  test_codec.cpp  test_gateways.cpp  test_logging.cpp  test_logging_glog.cpp  test_logging_spdlog.cpp  test_stream.cpp
(+488 files in other folders)
