configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.cmake.in
  ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
  @ONLY)

add_custom_target(${PROJECT_NAME}-doxygen ALL
  COMMAND ${DOXYGEN_EXECUTABLE} "Doxyfile"
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  VERBATIM)

install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/xml/"
  DESTINATION "${CMAKE_INSTALL_DATADIR}/doc/${PROJECT_NAME}/xml"
  FILES_MATCHING PATTERN "*.xml")

install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html/"
  DESTINATION "${CMAKE_INSTALL_DATADIR}/doc/${PROJECT_NAME}/html"
  FILES_MATCHING PATTERN "*.html")
